--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!--&lt;!&ndash; Base application theme. &ndash;&gt;-->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="AppTheme" parent="ThemeNoActionBar_cy">
 
         <!--此处可自行根据项目需要设置,和状态栏导航栏透明无关-->
         <item name="colorPrimary">@color/colorPrimary</item>
