简化使用方式，

--- a/app/src/main/res/layout/activity_status0.xml
+++ b/app/src/main/res/layout/activity_status0.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:background="@color/colorPrimary">
+        android:background="@color/theme">
 
         <TextView
             android:layout_width="match_parent"
