--- a/app/src/main/res/layout/activity_nav1.xml
+++ b/app/src/main/res/layout/activity_nav1.xml
@@ -8,8 +8,13 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="48dp"
         android:gravity="center"
-        android:text="navigationBar半透明(setNavigationBarColor)"
+        android:layout_alignParentBottom="true"
+        android:text="navigationBar半透明"
         android:textColor="@color/white" />
+<!--    <com.cy.translucentparent.NavigationBarView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:background="#33000000"-->
+<!--        android:layout_height="wrap_content"/>-->
 </RelativeLayout>
