--- a/app/src/main/res/layout/activity_nav2.xml
+++ b/app/src/main/res/layout/activity_nav2.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_status7"
     android:layout_width="match_parent"
@@ -9,8 +9,9 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_gravity="bottom"
         android:gravity="center"
         android:layout_alignParentBottom="true"
         android:text="navigationBar全透明"
         android:textColor="@color/white" />
-</RelativeLayout>
+</LinearLayout>
