--- a/app/src/main/res/layout/activity_status2.xml
+++ b/app/src/main/res/layout/activity_status2.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
     android:orientation="vertical">
-
+   <com.cy.translucentparent.StatusBarView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
