--- a/app/src/main/res/layout/activity_navigation0.xml
+++ b/app/src/main/res/layout/activity_navigation0.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,8 @@
     tools:context=".Navigation0Activity">
     <TextView
         android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
         android:gravity="center"
         android:text="系统navigationbar填充界面，并且navigation自定义颜色"
-        android:layout_height="match_parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="wrap_content"/>
+</RelativeLayout>
