--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,7 +25,7 @@
     <color name="transparent_white">#22ffffff</color>
     <!--<color name="theme">#304B90</color>-->
     <!--<color name="theme_half">#2a5caa</color>-->
-    <color name="theme">#ee2a5caa</color>
+    <color name="theme">#2a5caa</color>
 
     <color name="theme_half">#2a5caa</color>
 
