--- a/app/src/main/res/layout/activity_hide_status_bar.xml
+++ b/app/src/main/res/layout/activity_hide_status_bar.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FullScreenActivity">
+    android:orientation="vertical">
     <ImageView
         android:layout_width="match_parent"
         android:src="@drawable/huge"
         android:scaleType="centerCrop"
         android:id="@+id/iv"
         android:layout_height="match_parent"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
