--- a/app/src/main/res/layout/activity_hide_navigation_bar.xml
+++ b/app/src/main/res/layout/activity_hide_navigation_bar.xml
@@ -11,5 +11,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/huge" />
+        android:src="@drawable/paper" />
 </LinearLayout>
