--- a/app/src/main/res/layout/activity_full_screen.xml
+++ b/app/src/main/res/layout/activity_full_screen.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,5 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/huge" />
-</LinearLayout>
+        android:src="@drawable/paper" />
+    <TextView
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:text="点击切换全屏"
+        android:textColor="@color/white"
+        android:textSize="30sp"
+        android:layout_height="match_parent"/>
+</FrameLayout>
