--- a/app/src/main/res/layout/activity_hide_status_bar.xml
+++ b/app/src/main/res/layout/activity_hide_status_bar.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical">
     <ImageView
         android:layout_width="match_parent"
-        android:src="@drawable/huge"
+        android:src="@drawable/paper"
         android:scaleType="centerCrop"
         android:id="@+id/iv"
         android:layout_height="match_parent"/>
