--- a/app/src/main/res/layout/activity_status5.xml
+++ b/app/src/main/res/layout/activity_status5.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="centerCrop"
-        android:src="@drawable/huge" />
+        android:src="@drawable/paper" />
 
     <RelativeLayout
         android:layout_width="match_parent"
